--- a/source/stylesheets/_responsiveness.scss
+++ b/source/stylesheets/_responsiveness.scss
@@ -26,11 +26,6 @@
     .logo {
       left: 0;
     }
-
-    .burger {
-      right: px-to-rems(30);
-      top: px-to-rems(20);
-    }
   }
 
   .intro {
@@ -67,11 +62,6 @@
   .main-menu {
     .logo {
       left: 0;
-    }
-
-    .burger {
-      right: px-to-rems(30);
-      top: px-to-rems(20);
     }
   }
 
